--- a/Journal/Journal/Resources/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Resources/Base.lproj/Main.storyboard
@@ -93,29 +93,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MUJ-KE-tGZ">
-                                <rect key="frame" x="20" y="160" width="374" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lWM-cI-kiO">
-                                <rect key="frame" x="20" y="214" width="374" height="448"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2Hd-AC-a7W">
+                                <rect key="frame" x="20" y="160" width="374" height="553"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="QMW-2R-vQa">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😃"/>
+                                            <segment title="😐"/>
+                                            <segment title="☹️"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="moodSegmentedControl:" destination="dVa-mo-fwN" eventType="valueChanged" id="Kaa-6G-QLk"/>
+                                        </connections>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MUJ-KE-tGZ">
+                                        <rect key="frame" x="0.0" y="51" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lWM-cI-kiO">
+                                        <rect key="frame" x="0.0" y="105" width="374" height="448"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="fft-WE-QBH" firstAttribute="trailing" secondItem="lWM-cI-kiO" secondAttribute="trailing" constant="20" id="8n3-d1-dh1"/>
-                            <constraint firstItem="fft-WE-QBH" firstAttribute="bottom" secondItem="lWM-cI-kiO" secondAttribute="bottom" constant="200" id="8uE-JW-w9y"/>
-                            <constraint firstItem="fft-WE-QBH" firstAttribute="trailing" secondItem="MUJ-KE-tGZ" secondAttribute="trailing" constant="20" id="IZC-DP-vg4"/>
-                            <constraint firstItem="lWM-cI-kiO" firstAttribute="top" secondItem="MUJ-KE-tGZ" secondAttribute="bottom" constant="20" id="Jja-wZ-Noz"/>
-                            <constraint firstItem="lWM-cI-kiO" firstAttribute="top" secondItem="MUJ-KE-tGZ" secondAttribute="bottom" constant="20" id="TAh-0k-L10"/>
-                            <constraint firstItem="lWM-cI-kiO" firstAttribute="leading" secondItem="fft-WE-QBH" secondAttribute="leading" constant="20" id="X1q-yP-PXZ"/>
-                            <constraint firstItem="MUJ-KE-tGZ" firstAttribute="leading" secondItem="fft-WE-QBH" secondAttribute="leading" constant="20" id="eGu-9F-0UV"/>
-                            <constraint firstItem="MUJ-KE-tGZ" firstAttribute="top" secondItem="fft-WE-QBH" secondAttribute="top" constant="20" id="hvY-Cp-n3b"/>
+                            <constraint firstItem="2Hd-AC-a7W" firstAttribute="leading" secondItem="fft-WE-QBH" secondAttribute="leading" constant="20" id="LWR-ie-xNp"/>
+                            <constraint firstItem="fft-WE-QBH" firstAttribute="bottom" secondItem="2Hd-AC-a7W" secondAttribute="bottom" constant="149" id="MPL-U3-lji"/>
+                            <constraint firstItem="fft-WE-QBH" firstAttribute="trailing" secondItem="2Hd-AC-a7W" secondAttribute="trailing" constant="20" id="v6R-8l-N7c"/>
+                            <constraint firstItem="2Hd-AC-a7W" firstAttribute="top" secondItem="fft-WE-QBH" secondAttribute="top" constant="20" id="vRL-uK-cLG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fft-WE-QBH"/>
                     </view>
@@ -129,9 +141,11 @@
                     <connections>
                         <outlet property="entryBodyTextView" destination="lWM-cI-kiO" id="VAc-pV-lVF"/>
                         <outlet property="entryTitleTextField" destination="MUJ-KE-tGZ" id="X21-mQ-hmt"/>
+                        <outlet property="moodSegmentedControl" destination="QMW-2R-vQa" id="sir-qH-qDP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LIK-NM-KRd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="dVa-mo-fwN" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1716" y="98"/>
         </scene>
