--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -7,40 +7,40 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Journal-->
+        <!--Journal - Day 2-->
         <scene sceneID="rKV-q9-S0Q">
             <objects>
                 <tableViewController id="k3X-BC-y2U" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Xsg-Qs-uTn">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" springLoaded="YES" id="Xsg-Qs-uTn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalCell" id="P3d-Er-Obq" customClass="EntriesTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalCell" rowHeight="86" id="P3d-Er-Obq" customClass="EntriesTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="86"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="P3d-Er-Obq" id="Qrg-2I-7fi">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="86"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCr-Lw-we9">
-                                            <rect key="frame" x="274" y="0.0" width="133" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3f-hm-oWX">
-                                            <rect key="frame" x="12" y="22" width="395" height="21"/>
+                                            <rect key="frame" x="264" y="0.0" width="143" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Utf-MA-uYx">
-                                            <rect key="frame" x="12" y="0.0" width="244" height="18"/>
+                                            <rect key="frame" x="12" y="0.0" width="244" height="31"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3f-hm-oWX">
+                                            <rect key="frame" x="12" y="29" width="395" height="57"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -59,7 +59,7 @@
                             <outlet property="delegate" destination="k3X-BC-y2U" id="GlA-Kj-7d6"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Journal" id="QYP-NS-s6p">
+                    <navigationItem key="navigationItem" title="Journal - Day 2" id="QYP-NS-s6p">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="2ji-0P-Lql">
                             <connections>
                                 <segue destination="WLr-HE-yI2" kind="show" identifier="DetailView" id="AmB-rt-DiZ"/>
@@ -79,29 +79,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2bk-yT-m6E">
-                                <rect key="frame" x="20" y="140" width="374" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VWt-7j-6qV">
-                                <rect key="frame" x="20" y="182" width="374" height="453"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uQs-9H-rBl">
+                                <rect key="frame" x="0.0" y="140" width="414" height="756"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="woq-RA-H7u">
+                                        <rect key="frame" x="28" y="8" width="358" height="32"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <segments>
+                                            <segment title="😭"/>
+                                            <segment title="😠"/>
+                                            <segment title="🙂"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1va-0s-x4I">
+                                        <rect key="frame" x="28" y="61" width="358" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bzL-mH-M2b">
+                                        <rect key="frame" x="28" y="113" width="358" height="218"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="bzL-mH-M2b" secondAttribute="trailing" constant="28" id="5b1-LQ-qch"/>
+                                    <constraint firstItem="1va-0s-x4I" firstAttribute="leading" secondItem="uQs-9H-rBl" secondAttribute="leadingMargin" constant="20" id="Ldl-BP-OqT"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="woq-RA-H7u" secondAttribute="trailing" constant="20" id="N2J-0v-PHS"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="1va-0s-x4I" secondAttribute="trailing" constant="20" id="OS4-1F-cRZ"/>
+                                    <constraint firstItem="bzL-mH-M2b" firstAttribute="top" secondItem="1va-0s-x4I" secondAttribute="bottom" constant="18" id="P0Z-mb-hOX"/>
+                                    <constraint firstItem="woq-RA-H7u" firstAttribute="top" secondItem="uQs-9H-rBl" secondAttribute="topMargin" id="dzM-9J-xc4"/>
+                                    <constraint firstItem="bzL-mH-M2b" firstAttribute="leading" secondItem="uQs-9H-rBl" secondAttribute="leading" constant="28" id="kYT-wv-Pn8"/>
+                                    <constraint firstAttribute="bottom" secondItem="bzL-mH-M2b" secondAttribute="bottom" constant="425" id="ugG-Os-nkQ"/>
+                                    <constraint firstItem="woq-RA-H7u" firstAttribute="leading" secondItem="uQs-9H-rBl" secondAttribute="leadingMargin" constant="20" id="v0V-ps-kEP"/>
+                                    <constraint firstItem="1va-0s-x4I" firstAttribute="top" secondItem="woq-RA-H7u" secondAttribute="bottom" constant="22" id="ydu-2V-QZv"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Pe5-II-bIJ" firstAttribute="trailing" secondItem="2bk-yT-m6E" secondAttribute="trailing" constant="20" id="1Rm-FB-bTD"/>
-                            <constraint firstItem="2bk-yT-m6E" firstAttribute="leading" secondItem="Pe5-II-bIJ" secondAttribute="leading" constant="20" id="7aC-pq-k10"/>
-                            <constraint firstItem="2bk-yT-m6E" firstAttribute="trailing" secondItem="VWt-7j-6qV" secondAttribute="trailing" id="JCV-hP-s4g"/>
-                            <constraint firstItem="VWt-7j-6qV" firstAttribute="top" secondItem="2bk-yT-m6E" secondAttribute="bottom" constant="8" id="Neg-Mv-o2a"/>
-                            <constraint firstItem="2bk-yT-m6E" firstAttribute="top" secondItem="Pe5-II-bIJ" secondAttribute="top" id="jAh-QL-onG"/>
-                            <constraint firstItem="VWt-7j-6qV" firstAttribute="leading" secondItem="Pe5-II-bIJ" secondAttribute="leading" constant="20" id="lWL-yY-cLt"/>
-                            <constraint firstItem="Pe5-II-bIJ" firstAttribute="bottom" secondItem="VWt-7j-6qV" secondAttribute="bottom" constant="227" id="wT8-8c-CiG"/>
-                            <constraint firstItem="VWt-7j-6qV" firstAttribute="top" secondItem="2bk-yT-m6E" secondAttribute="bottom" constant="8" id="x2u-6H-tU0"/>
+                            <constraint firstItem="uQs-9H-rBl" firstAttribute="trailing" secondItem="Pe5-II-bIJ" secondAttribute="trailing" id="3ib-iY-Hzo"/>
+                            <constraint firstItem="uQs-9H-rBl" firstAttribute="top" secondItem="Pe5-II-bIJ" secondAttribute="top" id="GaK-qB-0q2"/>
+                            <constraint firstItem="uQs-9H-rBl" firstAttribute="leading" secondItem="Pe5-II-bIJ" secondAttribute="leading" id="n6m-mv-KQt"/>
+                            <constraint firstAttribute="bottom" secondItem="uQs-9H-rBl" secondAttribute="bottom" id="oIN-ZZ-Upe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Pe5-II-bIJ"/>
                     </view>
@@ -113,8 +137,10 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="journalTextView" destination="VWt-7j-6qV" id="xJs-n1-FnN"/>
-                        <outlet property="titleTextField" destination="2bk-yT-m6E" id="NPN-6w-MKZ"/>
+                        <outlet property="greyView" destination="uQs-9H-rBl" id="Qmz-eH-TgM"/>
+                        <outlet property="journalTextView" destination="bzL-mH-M2b" id="be7-eR-C0W"/>
+                        <outlet property="moodChange" destination="woq-RA-H7u" id="lr3-P0-8Mp"/>
+                        <outlet property="titleTextField" destination="1va-0s-x4I" id="6Y0-Ob-c57"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8yT-QJ-Rb6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
