--- a/JournalPT3/JournalPT3/Base.lproj/Main.storyboard
+++ b/JournalPT3/JournalPT3/Base.lproj/Main.storyboard
@@ -17,14 +17,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" id="dgT-Zd-c2A" customClass="EntryTableViewCell" customModule="JournalPT3" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="49.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dgT-Zd-c2A" id="x2T-55-KJR">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="49.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="CXh-AI-xYG">
-                                            <rect key="frame" x="20" y="2" width="374" height="45.5"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="CXh-AI-xYG">
+                                            <rect key="frame" x="20" y="2" width="374" height="51.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="M1N-ub-ntV">
                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -44,7 +44,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TjW-OU-u9P">
-                                                    <rect key="frame" x="0.0" y="24.5" width="374" height="21"/>
+                                                    <rect key="frame" x="0.0" y="30.5" width="374" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -99,28 +99,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hGo-jB-ipV">
-                                <rect key="frame" x="24" y="152" width="366" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6GW-ps-Xk8">
-                                <rect key="frame" x="24" y="198" width="366" height="664"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="v8p-zs-LMG">
+                                <rect key="frame" x="24" y="140" width="366" height="732"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="6bR-B0-ydI">
+                                        <rect key="frame" x="0.0" y="0.0" width="366" height="32"/>
+                                        <segments>
+                                            <segment title="😕"/>
+                                            <segment title="😏"/>
+                                            <segment title="😄"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hGo-jB-ipV">
+                                        <rect key="frame" x="0.0" y="43" width="366" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6GW-ps-Xk8">
+                                        <rect key="frame" x="0.0" y="89" width="366" height="643"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6GW-ps-Xk8" firstAttribute="top" secondItem="hGo-jB-ipV" secondAttribute="bottom" constant="12" id="4ij-jk-9ZW"/>
-                            <constraint firstItem="6GW-ps-Xk8" firstAttribute="leading" secondItem="Jhc-aS-ioa" secondAttribute="leading" constant="24" id="BaW-AB-cw2"/>
-                            <constraint firstItem="Jhc-aS-ioa" firstAttribute="trailing" secondItem="6GW-ps-Xk8" secondAttribute="trailing" constant="24" id="Gk9-qZ-mc5"/>
-                            <constraint firstItem="hGo-jB-ipV" firstAttribute="leading" secondItem="Jhc-aS-ioa" secondAttribute="leading" constant="24" id="T8v-Dl-tZO"/>
-                            <constraint firstItem="hGo-jB-ipV" firstAttribute="top" secondItem="Jhc-aS-ioa" secondAttribute="top" constant="12" id="Wpy-4D-Oi6"/>
-                            <constraint firstItem="Jhc-aS-ioa" firstAttribute="bottom" secondItem="6GW-ps-Xk8" secondAttribute="bottom" id="jyR-tt-BmH"/>
-                            <constraint firstItem="Jhc-aS-ioa" firstAttribute="trailing" secondItem="hGo-jB-ipV" secondAttribute="trailing" constant="24" id="lYi-Sw-q05"/>
+                            <constraint firstItem="Jhc-aS-ioa" firstAttribute="trailing" secondItem="v8p-zs-LMG" secondAttribute="trailing" constant="24" id="Av8-sp-xKe"/>
+                            <constraint firstItem="v8p-zs-LMG" firstAttribute="top" secondItem="Jhc-aS-ioa" secondAttribute="top" id="EBe-px-PuX"/>
+                            <constraint firstAttribute="bottom" secondItem="v8p-zs-LMG" secondAttribute="bottom" constant="24" id="nlP-dU-jJ1"/>
+                            <constraint firstItem="v8p-zs-LMG" firstAttribute="leading" secondItem="Jhc-aS-ioa" secondAttribute="leading" constant="24" id="pBj-ro-tjb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Jhc-aS-ioa"/>
                     </view>
@@ -133,6 +143,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodytextView" destination="6GW-ps-Xk8" id="4Kn-SR-gWE"/>
+                        <outlet property="moodControl" destination="6bR-B0-ydI" id="fQ6-En-qx8"/>
                         <outlet property="titleTextField" destination="hGo-jB-ipV" id="Jwr-z0-xa0"/>
                     </connections>
                 </viewController>
