finished data migration and data model updates

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -135,6 +135,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="nSm-qo-0cn" id="h3o-qh-Ith"/>
+                        <outlet property="moodSegmentedControl" destination="bqy-zQ-RdR" id="LLr-1W-muW"/>
                         <outlet property="titleTextField" destination="1Nk-oo-74R" id="w2W-PU-tVn"/>
                     </connections>
                 </viewController>
