--- a/Journal/JournalCoreData/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/JournalCoreData/Storyboards/Base.lproj/Main.storyboard
@@ -80,6 +80,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="C5M-tJ-241">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PzF-Wx-3pl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
